multi node testing  sample working.....  a lot to go .....

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,6 +1,9 @@
 akka {
   loggers = [akka.event.slf4j.Slf4jLogger]
   loglevel = debug
+
+  akka.extensions = ["akka.contrib.pattern.ClusterReceptionistExtension"]
+
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
     debug {
@@ -20,6 +23,20 @@ akka {
       "akka.tcp://"${processor.cluster.name}"@"${processor.seed-ip}":"${processor.seed-port}
     ]
     auto-down-unreachable-after = 10s
+
+
+    failure-detector {
+
+      # FQCN of the failure detector implementation.
+      # It must implement akka.remote.FailureDetector and have
+      # a public constructor with a com.typesafe.config.Config and
+      # akka.actor.EventStream parameter.
+      implementation-class = "akka.remote.PhiAccrualFailureDetector"
+
+      # How often keep-alive heartbeat messages should be sent to each connection.
+      heartbeat-interval = 120 s
+    }
+
   }
 }
 
@@ -33,5 +50,5 @@ processor {
   seed-ip = ${?SEED_PORT_1600_TCP_ADDR}
   seed-port = 1600
   seed-port = ${?SEED_PORT_1600_TCP_PORT}
-  cluster.name = clustering-cluster
+  cluster.name = ClusterSystem
 }
