--- a/src/main/resources/worker.conf
+++ b/src/main/resources/worker.conf
@@ -1,25 +1,10 @@
-
-hosts {
-
-  //var host = "platform-kafka-02.chaordicsystems.com:2181"
-  zookeeper= "localhost"
-}
-
-kafka.consumer {
-  zookeeper.connection.timeout.ms = "10000"
- // auto.commit.enable = "false"
-//  zookeeper.session.timeout.ms = "1000"
-//  zookeeper.sync.time.ms =  "1000"
-  consumer.timeout.ms =  "400"
- // autooffset.reset = "smallest"
-}
-
 akka {
 
-  actor.provider = "akka.cluster.ClusterActorRefProvider"
+  actor.provider = "akka.remote.RemoteActorRefProvider"
 
   remote.netty.tcp.port = 0
   remote.netty.tcp.hostname = 127.0.0.1
+
 
   remote {
 
@@ -31,9 +16,6 @@ akka {
   }
 
   cluster {
-    seed-nodes = [
-      "akka.tcp://ClusterSystem@127.0.0.1:2551"]#,
-#      "akka.tcp://ClusterSystem@127.0.0.1:2552"]
 
     auto-down-unreachable-after = 10s
 
@@ -49,7 +31,8 @@ akka {
       heartbeat-interval = 120 s
     }
   }
-
-  extensions = ["akka.contrib.pattern.ClusterReceptionistExtension"]
-
 }
+  contact-points = [
+    "akka.tcp://ClusterSystem@127.0.0.1:2551"]
+    #"akka.tcp://ClusterSystem@127.0.0.1:2552"]
+
