--- a/src/multi-jvm/resources_backup/worker.conf
+++ b/src/multi-jvm/resources_backup/worker.conf
@@ -33,6 +33,6 @@ akka {
   }
 }
   contact-points = [
-    "akka.tcp://ClusterSystem@127.0.0.1:2551"
-    "akka.tcp://ClusterSystem@127.0.0.1:2552"]
+    "akka.tcp://ClusterSystem@127.0.0.1:2551"]
+    #"akka.tcp://ClusterSystem@127.0.0.1:2552"]
 
