begin of coordinator test

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -5,7 +5,7 @@ akka {
   actor.provider = "akka.cluster.ClusterActorRefProvider"
 
   loggers = [akka.event.slf4j.Slf4jLogger]
-  loglevel = debug
+  loglevel = INFO
 
   #  remote.netty.tcp.port = 0
 #  remote.netty.tcp.hostname = 127.0.0.1
