Worker done, with tests

--- a/src/main/resources/kafka.conf
+++ b/src/main/resources/kafka.conf
@@ -9,6 +9,8 @@ kafka {
   }
 
   consumer {
+
+    
     zookeeper.connection.timeout.ms = "10000"
     // auto.commit.enable = "false"
     //  zookeeper.session.timeout.ms = "1000"
@@ -16,4 +18,28 @@ kafka {
     consumer.timeout.ms = "400"
     // autooffset.reset = "smallest"
   }
+
+  topic {
+
+    default {
+
+      maxInFlightPerStream = 64
+      commit.interval.seconds = 2
+      #commit.afterCount = 100
+
+    }
+
+   view {
+     maxInFlightPerStream = 1
+     commit.interval.seconds = 100000
+     commit.afterCount = 10000
+
+
+  }
+
+  transaction {
+
+  }
+}
+ 
 }
