--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -17,8 +17,9 @@ akka {
     }
 
     cluster {
+
       seed-nodes = [
-        "akka.tcp://ClusterSystem@127.0.0.1:2551"]#,
+        "akka.tcp://"${processor.cluster.name}"@127.0.0.1:2551"]#,
       #      "akka.tcp://ClusterSystem@127.0.0.1:2552"]
 
       auto-down-unreachable-after = 10s
