--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,5 +1,7 @@
 include "kafka"
 
+processor.cluster.master.path = "/user/master/active"
+
 akka {
 
   actor.provider = "akka.cluster.ClusterActorRefProvider"
@@ -16,9 +18,9 @@ akka {
   #  }
   #}
 
-  cluster {
-    seed-nodes = [
-      "akka.tcp://ClusterSystem@127.0.0.1:2551"]
+  #cluster {
+  #  seed-nodes = [
+  #    "akka.tcp://ClusterSystem@127.0.0.1:2551"]
      // "akka.tcp://test@127.0.0.1:2552"]
 
   #  auto-down-unreachable-after = 10s
@@ -31,7 +33,7 @@ akka {
       # How often keep-alive heartbeat messages should be sent to each connection.
   #    heartbeat-interval = 120 s
   #  }
-  }
+  #}
 
  # extensions = ["akka.contrib.pattern.ClusterReceptionistExtension"]
 
