--- a/src/test/resources/kafka.conf
+++ b/src/test/resources/kafka.conf
@@ -2,7 +2,7 @@ kafka {
 
   zookeeper {
 
-    hosts = "localhost"
+    hosts = "localhost:2181"
     connection.timeout = 30000
     session.timeout = 30000
 
@@ -11,9 +11,35 @@ kafka {
   consumer {
     zookeeper.connection.timeout.ms = "10000"
     // auto.commit.enable = "false"
-    //  zookeeper.session.timeout.ms = "1000"
-    //  zookeeper.sync.time.ms =  "1000"
-    consumer.timeout.ms = "400"
+    zookeeper.session.timeout.ms = "1000"
+    zookeeper.sync.time.ms = "1000"
+    consumer.timeout.ms = "1000"
     // autooffset.reset = "smallest"
+  }
+
+  group.prefix = "akka-kafka-processor"
+
+  topic {
+
+    default {
+
+      maxInFlightPerStream = 500
+      commit.interval.seconds = 2
+      streams = 1
+      #commit.afterCount = 999
+
+    }
+
+    view {
+      maxInFlightPerStream = 1
+      commit.interval.seconds = 10
+      commit.afterCount = 100
+
+
+    }
+
+    transaction {
+
+    }
   }
 }
