--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -50,5 +50,5 @@ processor {
   seed-ip = ${?SEED_PORT_1600_TCP_ADDR}
   seed-port = 1600
   seed-port = ${?SEED_PORT_1600_TCP_PORT}
-  cluster.name = ClusterSystem
+  cluster.name = ClusterSystemTest
 }
