--- a/src/main/resources/kafka.conf
+++ b/src/main/resources/kafka.conf
@@ -23,8 +23,8 @@ kafka {
 
     default {
 
-      maxInFlightPerStream = 64
-      commit.interval.seconds = 2
+#      maxInFlightPerStream = 64
+#      commit.interval.seconds = 2
       #commit.afterCount = 100
 
     }
