--- a/src/test/resources/kafka.conf
+++ b/src/test/resources/kafka.conf
@@ -23,8 +23,8 @@ kafka {
 
     default {
 
-      maxInFlightPerStream = 500
-      commit.interval.seconds = 2
+      maxInFlightPerStream = 1
+      #commit.interval.seconds = 2
       streams = 1
       #commit.afterCount = 999
 
