--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -2,14 +2,22 @@ include "kafka"
 
 processor.cluster.master.path = "/user/master/active"
 
+processor.contact-points = ${akka.cluster.seed-nodes}
+
+
 akka {
 
   actor.provider = "akka.cluster.ClusterActorRefProvider"
 
   extensions = ["akka.contrib.pattern.ClusterReceptionistExtension"]
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  #loggers = ["akka.testkit.TestEventListener", akka.event.slf4j.Slf4jLogger]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
-  loggers = [akka.event.slf4j.Slf4jLogger]
+  stdout-loglevel = "OFF"
+
   loglevel = DEBUG
+
   #PORT number the same as seed
   remote.netty.tcp.port = 2551
   remote.netty.tcp.hostname = 127.0.0.1
@@ -20,11 +28,12 @@ akka {
     }
   }
 
-
   cluster {
     seed-nodes = [
       "akka.tcp://"${processor.cluster.name}"@127.0.0.1:2551"
     ]
+
+    roles = ["master", "worker", "listener"]
 
   #  auto-down-unreachable-after = 10s
     failure-detector {
