--- a/src/main/resources/kafka.conf
+++ b/src/main/resources/kafka.conf
@@ -21,6 +21,9 @@ kafka {
 
   topic {
 
+    watcher.initialDelay = 10
+    watcher.interval = 10
+
     default {
 
 #      maxInFlightPerStream = 64
