--- a/src/multi-jvm/resources/application.conf
+++ b/src/multi-jvm/resources/application.conf
@@ -9,17 +9,16 @@ akka {
 
   actor.provider = "akka.cluster.ClusterActorRefProvider"
 
-  extensions = ["akka.contrib.pattern.ClusterReceptionistExtension"]
+  #extensions = ["akka.contrib.pattern.ClusterReceptionistExtension"]
+  extensions = []
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   #loggers = ["akka.testkit.TestEventListener", akka.event.slf4j.Slf4jLogger]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-
   stdout-loglevel = "OFF"
-
   loglevel = DEBUG
-
+  log-config-on-start = off
   #PORT number the same as seed
-  remote.netty.tcp.port = 2551
+  remote.netty.tcp.port = 2555
   remote.netty.tcp.hostname = 127.0.0.1
 
   remote {
@@ -30,10 +29,9 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka.tcp://"${processor.cluster.name}"@127.0.0.1:2551"
+      "akka.tcp://"${processor.cluster.name}"@127.0.0.1:2555"
     ]
 
-    #roles = ["master", "worker", "listener"]
     roles = []
 
   #  auto-down-unreachable-after = 10s
