MUlti node testing master fail over working

--- a/src/multi-jvm/resources/application.conf
+++ b/src/multi-jvm/resources/application.conf
@@ -2,19 +2,25 @@ include "kafka"
 
 processor.cluster.master.path = "/user/master/active"
 
-processor.contact-points = ${akka.cluster.seed-nodes}
+processor.contact-points = [
+  "akka.tcp://"${processor.cluster.name}"@127.0.0.1:8888",
+  #"akka://"${processor.cluster.name},
+  "akka.tcp://"${processor.cluster.name}"@127.0.0.1:7777"
+  #"akka.tcp://"${processor.cluster.name}"@127.0.0.1:6666",
+]
+ # ${akka.cluster.seed-nodes}
 
 
 akka {
 
   actor.provider = "akka.cluster.ClusterActorRefProvider"
 
-  #extensions = ["akka.contrib.pattern.ClusterReceptionistExtension"]
-  extensions = []
+  extensions = ["akka.contrib.pattern.ClusterReceptionistExtension"]
+  #extensions = []
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   #loggers = ["akka.testkit.TestEventListener", akka.event.slf4j.Slf4jLogger]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  stdout-loglevel = "OFF"
+  #stdout-loglevel = "ON"
   loglevel = DEBUG
   log-config-on-start = off
   #PORT number the same as seed
@@ -29,12 +35,15 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka.tcp://"${processor.cluster.name}"@127.0.0.1:2555"
+      "akka.tcp://"${processor.cluster.name}"@127.0.0.1:6666"
     ]
+
+    akka.cluster.auto-join = off
+    akka.cluster.auto-down = on
 
     roles = []
 
-  #  auto-down-unreachable-after = 10s
+    auto-down-unreachable-after = 20s
     failure-detector {
       # FQCN of the failure detector implementation.
       # It must implement akka.remote.FailureDetector and have
@@ -42,6 +51,7 @@ akka {
       # akka.actor.EventStream parameter.
       implementation-class = "akka.remote.PhiAccrualFailureDetector"
      #How often keep-alive heartbeat messages should be sent to each connection.
+      #heartbeat-interval = 120 s
       heartbeat-interval = 120 s
     }
   }
@@ -73,4 +83,20 @@ akka {
     }
   }
 
+}
+
+akka.contrib.cluster.receptionist {
+  # Actor name of the ClusterReceptionist actor, /user/receptionist
+  name = receptionist
+
+  # Start the receptionist on members tagged with this role.
+  # All members are used if undefined or empty.
+  role = ""
+
+  # The receptionist will send this number of contact points to the client
+  number-of-contacts = 3
+
+  # The actor that tunnel response messages to the client will be stopped
+  # after this time of inactivity.
+  response-tunnel-receive-timeout = 30s
 }
