--- a/src/main/resources/kafka.conf
+++ b/src/main/resources/kafka.conf
@@ -1,48 +1,43 @@
 kafka {
-
   zookeeper {
-
-    hosts = "192.168.2.110"  #localhost
-    connection.timeout = 30000
-    session.timeout = 30000
-
+    hosts = "192.168.169.105:2181"  #localhost
+    connection.timeout = 3000
+    session.timeout = 3000
   }
-
   consumer {
-
-    
     zookeeper.connection.timeout.ms = "10000"
-    // auto.commit.enable = "false"
-    //  zookeeper.session.timeout.ms = "1000"
-    //  zookeeper.sync.time.ms =  "1000"
-    consumer.timeout.ms = "400"
+    zookeeper.session.timeout.ms = "1000"
+    zookeeper.sync.time.ms = "1000"
+    consumer.timeout.ms = "1000"
     // autooffset.reset = "smallest"
   }
+
+  group.prefix = "akka-kafka-processor"
 
   topic {
 
     watcher.initialDelay = 10
-    watcher.interval = 10
+    watcher.interval = 2
 
     default {
 
-#      maxInFlightPerStream = 64
-#      commit.interval.seconds = 2
+      #      maxInFlightPerStream = 64
+      #      commit.interval.seconds = 2
       #commit.afterCount = 100
 
     }
 
-   view {
-     maxInFlightPerStream = 1
-     commit.interval.seconds = 100000
-     commit.afterCount = 10000
+    view {
 
+      maxInFlightPerStream = 1
+      commit.interval.seconds = 100000
+      commit.afterCount = 10000
 
+    }
+
+    transaction {
+
+    }
   }
 
-  transaction {
-
-  }
-}
- 
 }
