--- a/src/multi-jvm/resources/application.conf
+++ b/src/multi-jvm/resources/application.conf
@@ -14,7 +14,6 @@ processor.contact-points = [
 akka {
 
   actor.provider = "akka.cluster.ClusterActorRefProvider"
-
   extensions = ["akka.contrib.pattern.ClusterReceptionistExtension"]
   #extensions = []
   loggers = ["akka.event.slf4j.Slf4jLogger"]
@@ -35,11 +34,12 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka.tcp://"${processor.cluster.name}"@127.0.0.1:6666"
+     // "akka.tcp://"${processor.cluster.name}"@127.0.0.1:6666"
     ]
 
-    akka.cluster.auto-join = off
-    akka.cluster.auto-down = on
+    auto-join = off
+    auto-down = off
+    seed-node-timeout = 3s
 
     roles = []
 
@@ -52,7 +52,7 @@ akka {
       implementation-class = "akka.remote.PhiAccrualFailureDetector"
      #How often keep-alive heartbeat messages should be sent to each connection.
       #heartbeat-interval = 120 s
-      heartbeat-interval = 120 s
+      heartbeat-interval = 5 s
     }
   }
 
