support to docker add more seeds and masters

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,11 +3,11 @@ include "kafka"
 akka {
 
   extensions = ["akka.contrib.pattern.ClusterReceptionistExtension"]
-  loglevel = debug
+  loglevel = INFO
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
     debug {
-      receive = on
+      receive = off
       lifecycle = on
       # enable DEBUG logging of all AutoReceiveMessages (Kill, PoisonPill et.c.)
       autoreceive = on
@@ -38,7 +38,9 @@ akka {
   cluster {
     roles = [master, worker, listener]
     seed-nodes = [
-      "akka.tcp://"${processor.cluster.name}"@"${processor.seed-ip}":"${processor.seed-port}
+      "akka.tcp://"${processor.cluster.name}"@"${processor.seed-ip}":"${processor.seed-port},
+      "akka.tcp://"${processor.cluster.name}"@"${processor.seed2-ip}":"${processor.seed-port},
+      "akka.tcp://"${processor.cluster.name}"@"${processor.seed3-ip}":"${processor.seed-port}
     ]
     auto-down-unreachable-after = 10s
     seed-node-timeout = 3s
@@ -52,7 +54,7 @@ akka {
       implementation-class = "akka.remote.PhiAccrualFailureDetector"
 
       # How often keep-alive heartbeat messages should be sent to each connection.
-      heartbeat-interval = 5 s
+      heartbeat-interval = 50 s
     }
   }
 
@@ -83,10 +85,23 @@ processor {
   seed-ip = ${?SEED_PORT_1600_TCP_ADDR}
   seed-port = 1600
   seed-port = ${?SEED_PORT_1600_TCP_PORT}
+
+  seed2-ip = "127.0.0.1"
+  seed2-ip = ${?CLUSTER_IP}
+  seed2-ip = ${?SEED2_PORT_1600_TCP_ADDR}
+
+  seed3-ip = "127.0.0.1"
+  seed3-ip = ${?CLUSTER_IP}
+  seed3-ip = ${?SEED3_PORT_1600_TCP_ADDR}
+
+
   cluster.name = ClusterSystem
   cluster.master.path = "/user/master/active"
   contact-points = [
-    "akka.tcp://"${processor.cluster.name}"@"${processor.seed-ip}":"${processor.seed-port}
+    "akka.tcp://"${processor.cluster.name}"@"${processor.seed-ip}":"${processor.seed-port},
+    "akka.tcp://"${processor.cluster.name}"@"${processor.seed2-ip}":"${processor.seed-port},
+    "akka.tcp://"${processor.cluster.name}"@"${processor.seed3-ip}":"${processor.seed-port}
+  #  "akka.tcp://"${processor.cluster.name}"@"${processor.seed3-ip}":"${processor.seed-port}
    ]
 
 }
