--- a/src/main/resources/kafka.conf
+++ b/src/main/resources/kafka.conf
@@ -1,6 +1,6 @@
 kafka {
   zookeeper {
-    hosts = "192.168.169.105:2181"  #localhost
+    hosts = "192.168.1.196:2181"  #localhost
     connection.timeout = 3000
     session.timeout = 3000
   }
@@ -22,7 +22,7 @@ kafka {
     default {
 
       #      maxInFlightPerStream = 64
-      #      commit.interval.seconds = 2
+      #commit.interval.seconds = 10s
       #commit.afterCount = 100
 
     }
